refactoring et correction mobile

--- a/css/style.css
+++ b/css/style.css
@@ -133,78 +133,6 @@ body {
     margin-right: 10px;
   }
 }
-/*****loader*****/
-.loader {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #fff;
-  opacity: 1;
-  animation: disappear 4s forwards;
-}
-
-.loader:before,
-.loader:after {
-  content: "";
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-  position: relative;
-  margin: 0 5px;
-  border-radius: 50%;
-  color: pink;
-  background: currentColor;
-  box-shadow: 50px 0, -50px 0;
-  animation: left 1s infinite ease-in-out;
-}
-
-.loader:after {
-  color: #ff3d00;
-  animation: right 1.1s infinite ease-in-out;
-}
-
-@keyframes right {
-  0%, 100% {
-    transform: translateY(-10px);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-}
-@keyframes left {
-  0%, 100% {
-    transform: translateY(10px);
-  }
-  50% {
-    transform: translateY(-10px);
-  }
-}
-@keyframes disappear {
-  to {
-    transform: scale(0);
-  }
-}
-.localisation {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 20px;
-  background-color: #dedcdc;
-}
-.localisation__fa-solid {
-  font-weight: 900;
-}
-.localisation__lieu {
-  font-size: 22px;
-  margin-left: 20px;
-}
-
 .explorer {
   background-color: rgba(220, 220, 220, 0.3843137255);
   display: flex;
@@ -216,22 +144,24 @@ body {
   font-size: 26px;
   font-weight: 700;
   margin: 30px 5px;
+  padding: 0 40px;
   text-align: center;
 }
 .explorer__soustitre {
   font-family: "Roboto-light";
   font-weight: 100;
-  font-size: 22px;
+  font-size: 21px;
   text-align: center;
+  margin: 0 15px;
 }
 .explorer__btn {
   background: linear-gradient(#ff79da, #9356dc);
   box-shadow: 2px 5px 20px rgb(167, 167, 167);
-  width: 300px;
+  width: 240px;
   height: 70px;
   font-size: 18px;
   cursor: pointer;
-  margin: 30px;
+  margin: 30px 50px 60px 50px;
   color: white;
   border-radius: 40px;
 }
@@ -239,7 +169,6 @@ body {
   box-shadow: 3px 6px 20px rgb(137, 137, 137);
 }
 
-/******µSECTION TUORIEL******/
 i {
   position: relative;
 }
@@ -258,7 +187,7 @@ i {
   font-weight: 700;
 }
 .tutoriel__selection {
-  padding-left: 10px;
+  padding: 0 10px;
   list-style-type: none;
 }
 .tutoriel__selection li {
@@ -298,7 +227,6 @@ p {
   font-weight: 500;
 }
 
-/**********SECTION RESTO*********/
 .resto {
   width: 100%;
   background-color: #f6f6f6;
@@ -392,6 +320,80 @@ figcaption p {
   font-size: 24px;
 }
 
+/*****loader*****/
+.loader {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  opacity: 1;
+  animation: disappear 4s forwards;
+}
+
+.loader:before,
+.loader:after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  position: relative;
+  margin: 0 5px;
+  border-radius: 50%;
+  color: pink;
+  background: currentColor;
+  box-shadow: 50px 0, -50px 0;
+  animation: left 1s infinite ease-in-out;
+}
+
+.loader:after {
+  color: #ff3d00;
+  animation: right 1.1s infinite ease-in-out;
+}
+
+@keyframes right {
+  0%, 100% {
+    transform: translateY(-10px);
+  }
+  50% {
+    transform: translateY(10px);
+  }
+}
+@keyframes left {
+  0%, 100% {
+    transform: translateY(10px);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+}
+@keyframes disappear {
+  to {
+    transform: scale(0);
+  }
+}
+.localisation {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: #dedcdc;
+}
+.localisation__fa-solid {
+  font-weight: 900;
+}
+.localisation__lieu {
+  font-size: 22px;
+  margin-left: 20px;
+}
+
+/******µSECTION TUORIEL******/
+/**********SECTION RESTO*********/
 @media screen and (min-width: 768px) {
   .resto {
     width: 85%;
