--- a/sass/pages/_main.scss
+++ b/sass/pages/_main.scss
@@ -73,164 +73,11 @@
   }
 }
 // *********EXPLORER****************
-.explorer {
-  background-color: $explorerColor;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  &__titre {
-    font-size: 26px;
-    font-weight: 700;
-    margin: 30px 5px;
-    text-align: center;
-  }
-  &__soustitre {
-    font-family: "Roboto-light";
-    font-weight: 100;
-    font-size: 22px;
-    text-align: center;
-  }
-  &__btn {
-    @include linear-gradient;
-    @include button-shadow;
-    width: 300px;
-    height: 70px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 30px;
-    color: white;
-    border-radius: 40px;
-    &:hover {
-      @include hover-shadow;
-    }
-  }
-}
 /******µSECTION TUORIEL******/
-i {
-  position: relative;
-}
-.fas {
-  font-weight: 900;
-  margin-right: 10px;
-}
-.tutoriel {
-  padding: 30px 15px;
-  &__titre {
-    font-size: 24px;
-    margin: 0px 0px 35px 0px;
-    font-weight: 700;
-  }
-  &__selection {
-    padding-left: 10px;
-    list-style-type: none;
-    & li {
-      display: flex;
-      align-items: center;
-      width: 98%;
-      height: 80px;
-      margin: 15px;
-      cursor: pointer;
-      border-radius: 20px;
-      background-color: rgb(246, 246, 246);
-    }
-  }
-}
-.tutoriel__number {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: $backgroundtutonumb;
-  color: #fff;
-  border-radius: 50%;
-  border: 2px solid $backgroundtutonumb;
-  width: 28px;
-  height: 28px;
-  position: relative;
-  right: 10px;
-}
-.tutoriel__icon {
-  margin-left: 10px;
-  margin-right: 20px;
-  color: $tutoiconColor;
-  font-size: 18px;
-}
-p {
-  font-size: 16px;
-  font-weight: 500;
-}
 /**********SECTION RESTO*********/
-.resto {
-  width: 100%;
-  background-color: $restoColor;
-  margin: auto;
-  padding: 0;
-  &__titre {
-    font-size: 24px;
-    padding: 20px;
-    font-weight: 700;
-  }
-}
-.menus {
-  margin: 1rem;
-
-  &__card {
-    border-radius: 20px;
-    box-shadow: 4px 4px 6px $menucardshadhoww;
-    position: relative;
-    background: #fff;
-    width: 100%;
-    figure {
-      width: 100%;
-      margin: 0;
-      margin-bottom: 20px;
-      img {
-        object-fit: cover;
-        border-top-left-radius: 20px;
-        border-top-right-radius: 20px;
-        width: 100%;
-        height: 100%;
-        max-height: 180px;
-      }
-      figcaption {
-        padding: 10px 15px 15px 15px;
-      }
-    }
-  }
-}
-.menus__button .slogan {
-  color: $menubutton;
-  background: #99e2d0;
-  border: 5px solid #99e2d0;
-  border-radius: 2px;
-  position: absolute;
-  right: 5%;
-  top: 5%;
-  font-weight: bold;
-  font-size: 14px;
-  width: 25%;
-  text-align: center;
-  animation: clignote 2s linear infinite;
-}
-
-.card-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  & i {
-    position: absolute;
-    right: 15px;
-  }
-}
-figcaption p {
-  font-size: 16px;
-  font-weight: 100;
-}
-@include heart-animation;
-
 // ***********MEDIAQUERY***************
 @media screen and (min-width: 768px) {
-  .resto{
+  .resto {
     width: 85%;
   }
   .menus {
@@ -251,7 +98,7 @@ figcaption p {
     justify-content: space-around;
   }
   .tutoriel__titre {
-    margin:50px 0 0 110px;
+    margin: 50px 0 0 110px;
   }
   .tutoriel__selection li {
     width: 30%;
